# nama-bible

./: .gitignore  CLAUDE.md  DEV_NOTES.md  README.md  build_multilingual.py  evaluate.py  linguistics_report.json  main.py  nama_bt_parallel.json  nama_eng_clean.json  nama_eng_parallel.csv  nama_eng_parallel.json  parse_usfm.py  pyproject.toml  rtf_to_usfm.py  ruth_comparison_report.json  translate_ruth.py
data/bt/: 42-MRKbt.usfm  43-LUKbt.usfm  44-JHNbt.usfm  45-ACTbt.usfm  46-ROMbt.usfm  47-1CObt.usfm  48-2CObt.usfm  49-GALbt.usfm  50-EPHbt.usfm  51-PHPbt.usfm  52-COLbt.usfm  53-1THbt.usfm  54-2THbt.usfm  55-1TIbt.usfm  56-2TIbt.usfm  57-TITbt.usfm  58-PHMbt.usfm  59-HEBbt.usfm  60-JASbt.usfm  61-1PEbt.usfm  62-2PEbt.usfm  63-1JNbt.usfm  64-2JNbt.usfm  65-3JNbt.usfm  66-JUDbt.usfm  67-REVbt.usfm
data/corpus/: flex_parallel.json  nama_bt_parallel.json  nama_eng_augmented.json
data/eng/: 02-GENengwebp.usfm  03-EXOengwebp.usfm  05-NUMengwebp.usfm  (+13 more)
docs/: 01-rtf-to-usfm.md  02-parallel-corpus.md  03-model-training.md  04-data-cleaning.md  05-human-feedback-loop.md  README.md
raw/: 마태복음부터 사도행전까지.rtf
reports/: FINAL_REPORT_v3.5.md  SAMPLE_TRANSLATIONS_v3.5.md  data_quality_report.json  eval_v3_log.txt  evaluation_v3_results.json  ruth_comparison_report.json  v3.5_sample_verses.md  v3_comparison_detailed.json  v3_final_comparison_report.json
scripts/: build_multilingual.py  clean_and_augment.py  compare_ruth.py  evaluate.py  evaluate_v3.py  parse_usfm.py  rtf_to_usfm.py  train.py  train_v3.py  train_v3_4.py  train_v3_5.py  translate_draft.py  translate_ruth.py
(+98 files in other folders)
