[project]
name = "nama-bible"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.1.0",
    "bitsandbytes>=0.45.0",
    "datasets>=4.6.1",
    "ebooklib>=0.20",
    "pandas>=2.3.3",
    "peft>=0.15.0",
    "sacrebleu>=2.5.0",
    "sentencepiece>=0.2.0",
    "torch>=2.10.0",
    "transformers>=4.45,<5",
    "trl>=0.16.0",
    "weasyprint>=68.1",
]
